Fixing top spacing on Staff Section

--- a/web/themes/custom/sfgovpl/src/sass/node/_node-dept.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-dept.scss
@@ -432,6 +432,7 @@
 
   .sfgov-dept-about-people {
     @include contain-1090;
+    padding-top: 80px;
 
     .__people {
       background: $c-blue-1;
